# pyweatherflowudp

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  python-publish.yml
pyweatherflowudp/: calc.py
tests/: test_calc.py  test_version.py
